# sds-loader

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  banner.txt  cloudbuild.yaml  compose.yaml  docker-compose.yaml  pyproject.toml  run.py
.github/workflows/: check-version.yaml
app/: __init__.py  dependencies.py  profiles.py  routes.py  settings.py
app/broadcasters/: fake_broadcaster.py  pubsub_broadcaster.py
app/enums/: delete_status.py
app/exceptions/: __init__.py  dataset_broadcast_exception.py  dataset_deletion_empty_exception.py  dataset_deletion_exception.py  dataset_deletion_mark_exception.py  dataset_invalid_filename_exception.py  dataset_marked_for_deletion_empty_exception.py  dataset_metadata_retrival_exception.py  dataset_not_found_exception.py  dataset_source_empty_exception.py  dataset_storing_exception.py  dataset_validation_exception.py  empty_dataset_source_exception.py  invalid_dataset_filename_exception.py  schema_source_invalid_exception.py
app/factories/: __init__.py  dataset_factories.py
app/interfaces/: dataset_broadcast_interface.py  dataset_deletion_repository_interface.py  dataset_source_repository_interface.py  dataset_storage_repository_interface.py  schema_repository_interface.py
app/middleware/: timing.py
app/models/: __init__.py  bases.py  dataset.py  guid.py  schema.py  schema_metadata.py
app/util/: file_getters.py
integration_tests/: conftest.py  schema_publish_gcs_integration_test.py
performance_tests/: BRES_20_unit_data_dummy_encrypted.txt  generate_dataset.py
tests/: conftest.py
(+21 files in other folders)
