[project]
name = "sds-loader"
version = "0.1.0"
description = "A service for loading new sds schemas and datasets"
requires-python = "==3.13.*"
dependencies = [
    "sdx-base>=0.2.9",
    "sds-common==1.0.17",
    "lagom>=2.7.7",
    "polyfactory>=3.3.0",
    "pydantic-settings>=2.13.1",
    "fastapi>=0.119.0",
    "starlette>=0.48.0",
]

[[tool.uv.index]]
name = "sds-repo"
url = "https://europe-west2-python.pkg.dev/ons-sds-ci/sds-python-packages/simple/"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
]

lint = [
    "ruff>=0.11.7",
]

version-check = [
    "toml>=0.10.2",
    "tomlkit>=0.13.3",
]

[tool.uv.sources]
sdx-base = { index = "sdx-repo" }

[[tool.uv.index]]
name = "sdx-repo"
url = "https://europe-west2-python.pkg.dev/ons-sdx-ci/sdx-python-packages/simple/"


[tool.ruff]
line-length = 121
exclude = ["lib", "__pycache__", ".venv", ]

[tool.ruff.lint]
extend-select = ["E303", "W391", "W292", "E302"]
preview = true

